--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^18.11.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "typescript": "^4.8.4",
+    "webpack-cli": "^4.10.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,9 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "typescript": "^4.8.4",
-    "webpack-cli": "^4.10.0"
   }
 }
